--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                   <a href="mission.html">Our Mission</a>
                 </li>
                 <li>
-                  <a href="about.html">About the Designer</a>
+                  <a href="about.html">About Our Game </a>
                 </li>
                 <li>
                   <a href="glossary.html">Glossary</a>
