--- a/about.html
+++ b/about.html
@@ -24,6 +24,11 @@
             </ul>
         </nav>
       <h1> About Our Game</h1>
+      <h2> Paychecked</h2>
+      <p1> Our game will be playes as to where the player moves around 
+          trying to collect money, while dealing with obstacles that present themselves throughout the game.
+          The game could be compared to monopoly with us taking some inspiration from it.
+      </p1>
 
      </body>
 </html>
