--- a/about.html
+++ b/about.html
@@ -6,6 +6,11 @@
         <meta name="author" content="Kadin Biney">
         <title>Videogame</title>
         <link rel="stylesheet" href="style.css">
+        <style>
+        p {
+          margin:50px
+        }
+        </style>
     </head>
      <body>
         <nav id="topNav">
@@ -25,10 +30,10 @@
         </nav>
       <h1> About Our Game</h1>
       <h2> Paychecked</h2>
-      <p1> Our game will be playes as to where the player moves around 
+      <p> Our game will be playes as to where the player moves around 
           trying to collect money, while dealing with obstacles that present themselves throughout the game.
           The game could be compared to monopoly with us taking some inspiration from it.
-      </p1>
+      </p>
 
      </body>
 </html>
