--- a/about.html
+++ b/about.html
@@ -6,6 +6,11 @@
         <meta name="author" content="Kadin Biney">
         <title>Videogame</title>
         <link rel="stylesheet" href="style.css">
+        <style>
+        p {
+          margin:50px
+        }
+        </style>
     </head>
      <body>
         <nav id="topNav">
