--- a/about.html
+++ b/about.html
@@ -10,6 +10,9 @@
         p {
           margin:50px
         }
+        h {
+          margin:50px
+            }
         </style>
     </head>
      <body>
@@ -28,7 +31,7 @@
                 </li>
             </ul>
         </nav>
-      <h1> About Our Game</h1>
+      <h> About Our Game</h>
       <h2> Paychecked</h2>
       <p> Our game will be playes as to where the player moves around 
           trying to collect money, while dealing with obstacles that present themselves throughout the game.
