--- a/about.html
+++ b/about.html
@@ -10,9 +10,6 @@
         p {
           margin:50px
         }
-        h {
-          margin:50px
-            }
         </style>
     </head>
      <body>
@@ -28,7 +25,7 @@
                 </li>
             </ul>
         </nav>
-      <h> About Our Game</h>
+      <h1> About Our Game</h1>
       <h2> Paychecked</h2>
       <p> Our game will be playes as to where the player moves around 
           trying to collect money, while dealing with obstacles that present themselves throughout the game.
