--- a/pieces.html
+++ b/pieces.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Kadin Biney">
+        <title>Videogame</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+     <body>
+        <nav id="topNav">
+            <ul>
+               
+               <li>
+                  <a href="about.html">About Our Game </a>
+                </li>
+                <li>
+                  <a href="Pieces.html">Pieces</a>
+                </li>
+                <li> <a href="explorations.html">Explorations</a>
+                </li>
+            </ul>
+        </nav>
+         <h1> Pieces Of Our Project </h1>
 
+
+     </body>
+</html>
