--- a/pieces.html
+++ b/pieces.html
@@ -10,13 +10,13 @@
      <body>
         <nav id="topNav">
             <ul>
-               
+               <li>
+                  <a href="index.html">Home</a>
+                </li>
                <li>
                   <a href="about.html">About Our Game </a>
                 </li>
-                <li>
-                  <a href="Pieces.html">Pieces</a>
-                </li>
+                
                 <li> <a href="explorations.html">Explorations</a>
                 </li>
             </ul>
