--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
                   <a href="index.html">Home</a>
                 </li>
                 <li>
-                  <a href="glossary.html">Glossary</a>
+                  <a href="pieces.html">Pieces</a>
                 </li>
                 <li> <a href="explorations.html">Explorations</a>
                 </li>
