--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                   <a href="about.html">About Our Game </a>
                 </li>
                 <li>
-                  <a href="Pieces.html">Pieces</a>
+                  <a href="pieces.html">Pieces</a>
                 </li>
                 <li> <a href="explorations.html">Explorations</a>
                 </li>
