--- a/pieces.html
+++ b/pieces.html
@@ -22,7 +22,7 @@
             </ul>
         </nav>
          <h1> Pieces Of Our Project </h1>
-        <h2><a href="https://docs.google.com/document/d/1NcIJN5fNrGv1SoyvAWPESFRWMh3dtBcbkaRuhRgB3a4/edit?usp=sharing">Game Concept Clarification/a></h2>
+        <h2><a href="https://docs.google.com/document/d/1NcIJN5fNrGv1SoyvAWPESFRWMh3dtBcbkaRuhRgB3a4/edit?usp=sharing">Game Concept Clarification</a></h2>
          <p>  
 
      </body>
