--- a/pieces.html
+++ b/pieces.html
@@ -23,11 +23,11 @@
         </nav>
          <h1> Pieces Of Our Project </h1>
         <h2><a href="https://docs.google.com/document/d/1NcIJN5fNrGv1SoyvAWPESFRWMh3dtBcbkaRuhRgB3a4/edit?usp=sharing">Game Concept Clarification</a></h2>
-         <div> Linked above is out Game Concept Clarification Document. In this document we layed out some of the basis for what the game truly was.
+         <p1> Linked above is out Game Concept Clarification Document. In this document we layed out some of the basis for what the game truly was.
              This was the first time we had to think about some aspects of the game such as age range for the game, core mechanics, and many other little
              things that had passed our minds. This document was a big part of our project because it allowed us to thnk of all the basic things needed 
              for games instead of only making it fun. 
-         </div>
+         </p1>
 
      </body>
 </html>
