--- a/pieces.html
+++ b/pieces.html
@@ -28,6 +28,7 @@
              things that had passed our minds. This document was a big part of our project because it allowed us to thnk of all the basic things needed 
              for games instead of only making it fun. 
          </div>
+         <h2><a href="https://drive.google.com/file/d/1gVzyzDCNqx7ca0zxHpTrd_zhVmnKYIwI/view?usp=share_link>Character Draft Design</a></h2>
 
      </body>
 </html>
