--- a/pieces.html
+++ b/pieces.html
@@ -29,6 +29,7 @@
              for games instead of only making it fun. 
          </div>
          <h2><a href="https://drive.google.com/file/d/1gVzyzDCNqx7ca0zxHpTrd_zhVmnKYIwI/view?usp=share_link>Character Draft Design</a></h2>
-
+         <p1> This is one of our first simple mock designs for our game characters. This was just to get a feel for how big the character would be 
+             and.............
      </body>
 </html>
