--- a/pieces.html
+++ b/pieces.html
@@ -31,5 +31,6 @@
          <h2>Character Draft Design</h2>
          <p1> This is one of our first simple mock designs for our game characters. This was just to get a feel for how big the character would be 
              and could end up making it's way into the final design of the game. </p1> 
+         <img src="character.jpg" alt="Character" width="500" height="333">
      </body>
 </html>
