--- a/pieces.html
+++ b/pieces.html
@@ -29,8 +29,9 @@
              for games instead of only making it fun. 
          </p1>
          <h2>Character Draft Design</h2>
-         <p1> This is one of our first simple mock designs for our game characters. This was just to get a feel for how big the character would be 
-             and could end up making it's way into the final design of the game. </p1> 
+         <p class="ex1"> This is one of our first simple mock designs for our game characters. This was just to get a feel for how big the character would be 
+             and could end up making it's way into the final design of the game. </p> 
          <img src="character.jpg" alt="Character" width="250" height="167">
+       
      </body>
 </html>
