--- a/pieces.html
+++ b/pieces.html
@@ -32,6 +32,11 @@
          <p class="ex1"> This is one of our first simple mock designs for our game characters. This was just to get a feel for how big the character would be 
              and could end up making it's way into the final design of the game. </p> 
          <img src="character.jpg" alt="Character" width="500" height="333">
+         <h2>a href="https://docs.google.com/document/d/1dJKRi-Zs5-f0N1fW-HFWp_4zUjB3I6emlqD0BZ2XKi0/edit>Flow Chart/ Pseudo Code</a></h2>
+         <p1> This is our flowchart/pseudo Code. We did this exercise so we could understand the process of coding on a more simple level. 
+             The pseudo code was just a simple code that wouldn't actually work for any language. We still made sure to make our own rules 
+             for the code though to fully give the feel of real coding.
+         </p1>
        
      </body>
 </html>
