--- a/pieces.html
+++ b/pieces.html
@@ -37,7 +37,7 @@
              The pseudo code was just a simple code that wouldn't actually work for any language. We still made sure to make our own rules 
              for the code though to fully give the feel of real coding.
          </p1>
-         <img src="images/bet.jpg" alt="Bet" width="500" height="333">
-         <p1> TEST 2</p1>
+         <img src="Images/bet.jpg" alt="Bet" width="500" height="333">
+         <p1> TEST 3</p1>
      </body>
 </html>
