--- a/pieces.html
+++ b/pieces.html
@@ -37,7 +37,15 @@
              The pseudo code was just a simple code that wouldn't actually work for any language. We still made sure to make our own rules 
              for the code though to fully give the feel of real coding.
          </p1>
+        <div class="gallery">
+            <a target="_blank" href="Images/bet.jpg">
+                <img src="Images/bet.jpg" alt="Bet" width="600" height="400">
+            </a>
+        <div class="desc">Add a description of the image here</div>
+        </div>
+
+
          <img src="Images/bet.jpg" alt="Bet" width="500" height="333">
-         <p1> TEST 3</p1>
+         <p1> TEST 4</p1>
      </body>
 </html>
