--- a/pieces.html
+++ b/pieces.html
@@ -38,8 +38,8 @@
              for the code though to fully give the feel of real coding.
          </p1>
         <div class="gallery">
-            <a target="_blank" href="Images/bet.jpg">
-                <img src="Images/bet.jpg" alt="Bet" width="600" height="400">
+            <a target="_blank" href="Images/bills.jpg">
+                <img src="Images/bills.jpg" alt="Bet" width="600" height="400">
             </a>
         <div class="desc">Add a description of the image here</div>
         </div>
