--- a/pieces.html
+++ b/pieces.html
@@ -37,6 +37,7 @@
              The pseudo code was just a simple code that wouldn't actually work for any language. We still made sure to make our own rules 
              for the code though to fully give the feel of real coding.
          </p1>
+         <h2>Our Game Cards</h2>
         <div class="gallery">
             <a target="_blank" href="Images/bills.jpg">
                 <img src="Images/bills.jpg" alt="Bet" width="600" height="400">
