--- a/pieces.html
+++ b/pieces.html
@@ -42,7 +42,7 @@
             <a target="_blank" href="Images/bills.jpg">
                 <img src="Images/bills.jpg" alt="Bet" width="300" height="200">
             </a>
-        <div class="desc">Pay $300 increase to $500 after 4 turns/div>
+        <div class="desc">Pay $300 increase to $500 after 4 turns</div>
         </div>
         
          <div class="gallery">
