--- a/pieces.html
+++ b/pieces.html
@@ -63,7 +63,7 @@
             <a target="_blank" href="Images/payout.jpg">
                 <img src="Images/payout.jpg" alt="paycut" width="300" height="200">
             </a>
-        <div class="desc">loose $100 :(</div>
+        <div class="desc">Loose $100 :(</div>
         </div>
             
         <div class="gallery">
