--- a/pieces.html
+++ b/pieces.html
@@ -38,6 +38,8 @@
              for the code though to fully give the feel of real coding.
          </p1>
          <h2>Our Game Cards</h2>
+         <p1> This was our first draft for our game pieces. This was to get a feel for how we wanted our game cards to look like and in 
+             the end we used a design very similar to these ones. We also have the game board here.
         <div class="gallery">
             <a target="_blank" href="Images/bills.jpg">
                 <img src="Images/bills.jpg" alt="Bet" width="300" height="200">
