--- a/about.html
+++ b/about.html
@@ -30,6 +30,6 @@
           trying to collect money, while dealing with obstacles that present themselves throughout the game.
           The game could be compared to monopoly with us taking some inspiration from it.
       </p>
-
+      <img src="Images/rules.png" alt="Game Rules" width="412" height="1012">
      </body>
 </html>
