--- a/pieces.html
+++ b/pieces.html
@@ -37,7 +37,7 @@
              The pseudo code was just a simple code that wouldn't actually work for any language. We still made sure to make our own rules 
              for the code though to fully give the feel of real coding.
          </p1>
-         <h2> Coin<h2>
+         <h2> Coin</h2>
          <center><img src="coin.jpg" alt="Coin" width="512" height="342"></center>    
          <center><p1> This is our coin for our game. This will be used as a fun representation of money</p1></center>    
          <h2>Our Game Cards</h2>
