--- a/pieces.html
+++ b/pieces.html
@@ -38,7 +38,7 @@
              for the code though to fully give the feel of real coding.
          </p1>
          <h2> Coin</h2>
-         <center><img src="coin.jpg" alt="Coin" width="512" height="342"></center>    
+         <center><img src="Images/coin.jpg" alt="Coin" width="512" height="342"></center>    
          <center><p1> This is our coin for our game. This will be used as a fun representation of money.</p1></center>    
          <h2>Our Game Cards</h2>
          <p1> This was our first draft for our game pieces. This was to get a feel for how we wanted our game cards to look like and in 
