--- a/pieces.html
+++ b/pieces.html
@@ -33,7 +33,7 @@
              and could end up making it's way into the final design of the game. </p> 
          <center><img src="character.jpg" alt="Character" width="500" height="333"></center>
         <center><iframe allowfullscreen width="640" height="480" loading="lazy" frameborder="0" src="https://p3d.in/e/Fktil"></iframe></center>
-         <center><p1>Above is the real 3D model we chose to use for our game. You could move it arund to look at different angels</p1></center>
+         <center><p1>Above is the real 3D model we chose to use for our game. You could move it arund to look at different angles</p1></center>
          <h2><a href="https://docs.google.com/document/d/1dJKRi-Zs5-f0N1fW-HFWp_4zUjB3I6emlqD0BZ2XKi0/edit">Flow Chart/Pseudo Code</a></h2>
          <p1> This is our flowchart/pseudo Code. We did this exercise so we could understand the process of coding on a more simple level. 
              The pseudo code was just a simple code that wouldn't actually work for any language. We still made sure to make our own rules 
